[package]
name = "plc"
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
edition = "2021"
rust-version = "1.74"
description = "Key management for DID PLC identities"
license = "MIT OR Apache-2.0"

[dependencies]
# Async network requests
hickory-resolver = "0.24"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }

# ATProto
atrium-api = "0.24"
atrium-crypto = "0.1"
atrium-xrpc = "0.11"
atrium-xrpc-client = "0.5"

# CLI
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
zeroize = { version = "1", features = ["zeroize_derive"] }

# Storage
known-folders = "1"
serde_json = "1"
xdg = "2"

[dev-dependencies]
snapbox = { version = "0.6", features = ["dir"] }
