[package]
name = "plc"
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
edition = "2021"
rust-version = "1.74"
description = "Key management for DID PLC identities"
license = "MIT OR Apache-2.0"

[dependencies]
# Async network requests
hickory-resolver = "0.24"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }

# ATProto
atrium-api = "0.24.4"
atrium-crypto = "0.1"
atrium-xrpc = "0.11"
atrium-xrpc-client = "0.5"
base32 = "0.5"
base64ct = { version = "1.6", features = ["alloc"] }
chrono = "0.4"
cid = "0.11"
serde_ipld_dagcbor = "0.6"
sha2 = "0.10"

# CLI
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
zeroize = { version = "1", features = ["zeroize_derive"] }

# Inspection
diff-struct = "0.5"

# Storage
known-folders = "1"
serde_json = "1"
xdg = "2"

# Registry mirror
anyhow = { version = "1", optional = true }
async-sqlite = { version = "0.3", optional = true, features = ["serde_json"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "fmt"]}

[dev-dependencies]
rand_core = "0.6"
snapbox = { version = "0.6", features = ["dir"] }

[features]
mirror = [
    "dep:anyhow",
    "dep:async-sqlite",
    "dep:tracing",
    "dep:tracing-subscriber",
    "tokio/signal"
]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    "cfg(tarpaulin_include)",
]
